# SFML-Revived

./: SFML.cabal
cbits/SFML/Graphics/: Shader_helper.c
demos/: sfml-demos.cabal
