cabal-version: 3.6
name: sfml-demos
version: 0.2.0.0
build-type: Simple
license: MIT
license-file: "LICENSE"
synopsis: SFML demos
category: Game
author: Marc Sunet
data-dir: assets
data-files:         DST-BreakOut.ogg, Haskell-Logo.png, Vera.ttf

common shared
    build-depends:      base == 4.*
                        , SFML == 2.5.0.0
    buildable:          True
    default-language:   Haskell2010
    ghc-options:        -debug
    
 
executable sfml-window
    import: shared
    main-is:            main.hs
    hs-source-dirs:     window

executable sfml-time
    import: shared
    main-is:            main.hs
    hs-source-dirs:     time

executable sfml-transform
    import: shared
    main-is:            main.hs
    hs-source-dirs:     transform

executable sfml-hello
    import: shared
    main-is:            main.hs
    hs-source-dirs:     hello
    other-modules:      Paths_sfml_demos

executable sfml-events
    import: shared
    main-is:            main.hs
    hs-source-dirs:     events
    other-modules:      Paths_sfml_demos

executable sfml-unicode
    import: shared
    main-is:            main.hs
    hs-source-dirs:     unicode
    other-modules:      Paths_sfml_demos

executable sfml-fingerpaint
    import: shared
    main-is:            main.hs
    hs-source-dirs:     fingerpaint
